minor blog post styling; fixed main overflow issue

--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -7,7 +7,7 @@
 
 .main {
   margin-top: var(--nav-bar-height);
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
